2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Make the AV URI setting function more:
	- generic (Takes Callback to call after URI is set)
	- public.

2008-01-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:

	get_selected_item() returns the URI instead of resource_hash.

2008-01-24  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/main.c:

	Use UPnP types to differentiate the devices rather than GTypes.

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	- Use GUPnPDeviceProxy rather than now removed GUPnPMediaServerProxy.
	- Move and adapt code from GUPnPMediaServerProxy for 'browse'.

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	Use GUPnPDeviceProxy rather than now removed GUPnPMediaRendererProxy.

2008-01-13  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/gui.c:
	* src/common/icons.c:
	* src/common/icons.h:
	* src/network-light/Makefile.am:
	* src/network-light/gui.c:
	* src/universal-cp/gui.c:

	Refactor: Move the load_pixbuf_file() into common icon module and use
	that function in that module as well.

2008-01-13  Zeeshan Ali Khattak  <zeenix@gmail.com>
	Vinicius Depizzol <vdepizzol@gmail.com>

	* data/pixmaps/Makefile.am:
	* data/pixmaps/av-cp.png:
	* data/pixmaps/universal-cp.png:
	* src/av-cp/gui.c:
	* src/universal-cp/gui.c:

	Add icons for universal-cp and av-cp.

2008-01-02  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/Makefile.am:

	Fix a small typo.

2007-12-31  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Move some static functions to the top of the file.
	- Subscribe to LastChange event to be notified of the state changes.

2007-12-27  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Refactor: Put all the code that sets the state in the treemodel into
	a separate function.
